# SeismicDB

./: Cargo.toml  Dockerfile  LICENSE  README.md  publish.sh
bins/dtftools/: dtfcat.rs  dtfcheck.rs  dtfconcat.rs  dtfnumpy.rs  dtfrepair.rs  dtfsplit.rs  main.rs
bins/sdb/: interactive.rs  main.rs
bins/sdb-server/: main.rs
crates/sdb-client/: Cargo.toml
crates/sdb-client/src/: client.rs  error.rs  lib.rs
crates/sdb-core/: Cargo.toml
crates/sdb-core/src/dtf/: update.rs
crates/sdb-core/src/storage/: dtf_file_metadata.rs
crates/sdb-server-core/: Cargo.toml
crates/sdb-server-core/src/: handler.rs  lib.rs  parser.rs  prelude.rs  server.rs  state.rs  utils.rs
crates/tdb-cli/: Cargo.toml
crates/tdb-core/: Cargo.toml
crates/tdb-core/src/dtf/: file_format.rs
crates/tdb-server-core/: Cargo.toml
tests/: integration_test.rs
