[package]
name = "seismicdb"
authors = ["Alice Shinjoi <traderalice2011@gmail.com>"]
description = "SeismicDB - Efficient compressed level 2 & tick data storage."
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/alice-comfy/SeismicDB"
license = "MIT"
edition = "2021"
version = "0.6.0" #INDEV
exclude = ["cli/", "test/test-data/bt_btceth.dtf", "publish.sh"]
readme = "README.md"

[[bin]]
name = "sdb-server"
bench = false
path = "bins/sdb-server/main.rs"

[[bin]]
name = "dtftools"
bench = false
path = "bins/dtftools/main.rs"

[[bin]]
name = "sdb"
bench = false
path = "bins/sdb/main.rs"

[dependencies]
sdb_server_core = { path = "crates/sdb-server-core", version = "0.6.0", features = ["influx"] }
sdb_core = { path = "crates/sdb-core", version = "0.6.0" }
sdb_client = { path = "crates/sdb-client", version = "0.6.0" }
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
openssl-probe = "0.1.4"
indicatif = "0.17.0-beta.1"

itertools = "0.11.0"

clap = "2.33.3"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
byteorder = "1.4.3"
indoc = "2.0.1"
linefeed = "0.6.0"
memmap = "0.7.0"
zip = "0.6.6"


[workspace]
members = [
    "crates/*",
]

[[test]]
name = "integration"
path = "tests/integration_test.rs"

[features]

default = ["influx"]
influx = []
