[package]
name = "sdb_client"
authors = ["Alice Shinoji <traderalice2011@gmail.com>"]
description = "client for tectonicdb"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/0b01/tectonicdb"
license = "MIT"
edition = "2021"
version = "0.6.0"
readme = "../../README.md"

[dependencies]
sdb_core = { path = "../sdb-core", version = "0.6.0" }
byteorder = "1.4.3"
log = "0.4.14"
bufstream = "0.1.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
