[package]
name = "sdb_core"
authors = ["Alice Shinoji <traderalice2011@gmail.com>"]
description = "market data server for contiguous order book ticks"
keywords = ["finance", "datastore", "database", "financial", "orderbook"]
repository = "https://github.com/alice-comfy/seismicdb"
license = "MIT"
edition = "2021"
version = "0.6.0"
readme = "../../README.md"

[dependencies]
csv = "1.1.6"
bitflags = "2.3.2"
byteorder = "1.4.3"
indexmap = {version="2.0.0", features=["serde"]}

chrono = "0.4.19"
fern = "0.6.0"
log = "0.4.8"

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
libc = "0.2.102"

alloc_counter = { version = "0.0.4", optional = true }
arrayvec = "0.7.1"

lazy_static = "1.4.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "1.3.4"

[features]
default = []
count_alloc = ["alloc_counter"]
